[package]
name = "xbox"
version = "0.1.0"
authors = ["PumpedSardines <fritiof@rusck.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.9"
lazy_static = "1.4.0"
enigo = "0.0.14"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "libloaderapi", "xinput", "winerror"] }